styles.css
li {
  display: inline-block;
  width: 32%;
  margin: 10px;
}

.octocat img {
  border: 2px solid lightgrey;
  border-radius: 10px, 10px, 0px, 10px;;
}

ul {
  list-style-type: none;
}

.image-footer {
  border-bottom: 2px solid lightgrey;
  margin: 30px 0 20px 0;
  padding: 0 0 20px 0;
  display: inline-block;
  width: 100%;

}

span {
  color: grey;
  font-size: 30px;
  font-weight: bold;
  font-family: sans-serif;
}

.image-number{
  display: inline-block;
  vertical-align: middle;
  color: lightgrey;
  width: 150px;
  margin-top: 15px;
}

.image-caption {
  display: inline;
  float: right;
  vertical-align: middle;
}


a {
  text-decoration: none;
  color: black;
  font-size: 30px;
  font-weight: bold;
  font-family: sans-serif;
}
.authors {
  display: inline;
  vertical-align: middle;
}

.authors li {
  display: inline;
  right: 0;
}


ul .authors img {
  width: 70px;
  vertical-align: middle;
}

.triangle {
width: 0;
height: 0;
border-style: solid;
border-width: 30px 25px 0 25px;
border-color: #b7babd transparent transparent transparent;
float: right;
vertical-align:top;
margin-top: -7px;
}

